--- a/WebApplication1/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebApplication1/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,6 @@
-<div class='main-nav'>
+<p>Hello from nav</p>
+
+<!--div class='main-nav'>
     <div class='navbar navbar-inverse'>
         <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded' (click)='toggle()'>
@@ -30,4 +32,4 @@
             </ul>
         </div>
     </div>
-</div>
+</div-->
