--- a/WebApplication1/ClientApp/src/app/app.component.html
+++ b/WebApplication1/ClientApp/src/app/app.component.html
@@ -1,4 +1,14 @@
-<div class='container-fluid'>
+<div class="button-row">
+  <button mat-button>Basic</button>
+  <button mat-button color="primary">Primary</button>
+  <button mat-button color="accent">Accent</button>
+  <button mat-button color="warn">Warn</button>
+  <button mat-button disabled>Disabled</button>
+  <a mat-button routerLink=".">Link</a>
+</div>
+<p>Hello</p>
+<app-nav-menu></app-nav-menu>
+<!--div class='container-fluid'>
   <div class='row'>
     <div class='col-sm-3'>
       <app-nav-menu></app-nav-menu>
@@ -7,4 +17,4 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-</div>
+</div-->
