--- a/WebApplication1/ClientApp/src/app/app.component.html
+++ b/WebApplication1/ClientApp/src/app/app.component.html
@@ -1,13 +1,3 @@
-<div class="button-row">
-  <button mat-button>Basic</button>
-  <button mat-button color="primary">Primary</button>
-  <button mat-button color="accent">Accent</button>
-  <button mat-button color="warn">Warn</button>
-  <button mat-button disabled>Disabled</button>
-  <a mat-button routerLink=".">Link</a>
-</div>
-<p>Hello</p>
-<app-nav-menu></app-nav-menu>
 <!--div class='container-fluid'>
   <div class='row'>
     <div class='col-sm-3'>
@@ -18,3 +8,35 @@
     </div>
   </div>
 </div-->
+
+<mat-sidenav-container class="app-sidenav-container">
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="app-sidenav">
+    <mat-toolbar color="primary">
+      <span class="app-username">Имя пользователя</span>
+      <span class="app-spacer"></span>
+      <button mat-raised-button color="accent">Выход</button>
+    </mat-toolbar>
+    
+    <mat-list>
+      <mat-list-item>
+        <button mat-button color="primary">Пункт меню 1</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Пункт меню 2</button>
+      </mat-list-item>
+    </mat-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <mat-icon class="app-menu-icon" (click)="sidenav.toggle()">menu</mat-icon>
+        <span class="app-nav-company">Акционерное общество «Геологические Технологии Сибири»</span>
+        <span class="app-spacer"></span>
+        <mat-icon>search</mat-icon>
+      </mat-toolbar-row>
+    </mat-toolbar>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
