--- a/WebApplication1/ClientApp/src/app/app.component.html
+++ b/WebApplication1/ClientApp/src/app/app.component.html
@@ -36,6 +36,7 @@
         <mat-icon>search</mat-icon>
       </mat-toolbar-row>
     </mat-toolbar>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
