Пункты меню, лого в файлы

--- a/WebApplication1/ClientApp/src/app/app.component.html
+++ b/WebApplication1/ClientApp/src/app/app.component.html
@@ -13,6 +13,7 @@
     <button mat-button class="app-menu-button" (click)="sidenav.toggle()" title="Навигация">
       <mat-icon>menu</mat-icon>
     </button>
+    <mat-icon svgIcon="SibGeoTekh_logo"></mat-icon>
     <span class="app-nav-company">Акционерное общество «Геологические Технологии Сибири»</span>
     <span class="app-spacer"></span>
     <mat-icon>search</mat-icon>
@@ -28,12 +29,27 @@
         <button mat-raised-button color="accent">Выход</button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button color="primary">Пункт меню 1</button>
+        <button mat-button color="primary">О компании</button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button color="primary">Пункт меню 2</button>
+        <button mat-button color="primary">Услуги</button>
       </mat-list-item>
-    </mat-list>
+      <mat-list-item>
+        <button mat-button color="primary">Проекты</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Фотогаллерея</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Публикации</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Вакансии</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Контакты</button>
+      </mat-list-item>
+        </mat-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
@@ -42,3 +58,4 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
