--- a/WebApplication1/ClientApp/src/app/app.component.html
+++ b/WebApplication1/ClientApp/src/app/app.component.html
@@ -8,12 +8,13 @@
     </div>
   </div>
 </div-->
+
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <button mat-button class="app-menu-button" (click)="sidenav.toggle()" title="Навигация">
       <mat-icon>menu</mat-icon>
     </button>
-    <mat-icon svgIcon="SibGeoTekh_logo"></mat-icon>
+    <span class="app-svg-icon"></span>
     <span class="app-nav-company">Акционерное общество «Геологические Технологии Сибири»</span>
     <span class="app-spacer"></span>
     <mat-icon>search</mat-icon>
