remove app-svg-icon

--- a/WebApplication1/ClientApp/src/app/app.component.html
+++ b/WebApplication1/ClientApp/src/app/app.component.html
@@ -13,8 +13,8 @@
   <mat-toolbar-row>
     <button mat-button class="app-menu-button" (click)="sidenav.toggle()" title="Навигация">
       <mat-icon>menu</mat-icon>
+      <mat-icon>"SibGeoTekh_logo"</mat-icon>
     </button>
-    <span class="app-svg-icon"></span>
     <span class="app-nav-company">Акционерное общество «Геологические Технологии Сибири»</span>
     <span class="app-spacer"></span>
     <mat-icon>search</mat-icon>
