--- a/GeoApp/ClientApp/src/app/home/home.component.css
+++ b/GeoApp/ClientApp/src/app/home/home.component.css
@@ -1,3 +1,16 @@
-.home-corusel-item {
-  background: url('/assets/SibGeoTekh_logo.jpg');
+owl-carousel ::ng-deep .owl-dot {
+  display: block !important;
+}
+
+.my-dots-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.my-dot {
+  display: table-cell;
+  vertical-align: middle;
 }
