--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
@@ -1,3 +1,38 @@
-<p>
-  about-staff works!
-</p>
+
+
+<div class="art-postcontent" style="color: rgb(149, 149, 149); font-family: Arial, Helvetica, sans-serif;">
+  <div style="text-align: center;">&nbsp;</div>
+
+  <div style="text-align: center;">
+    <p>&nbsp;</p>
+
+    <table border="0" cellpadding="1" cellspacing="1" style="border-collapse:collapse; margin:1px; width:500px">
+      <tbody>
+        <tr>
+          <td><a class="lb2" href="http://geotehn.ru/sites/default/files/sovluk.png" style="margin: 0px; padding: 0px; color: rgb(44, 70, 148); text-decoration-line: none;"><img alt="" src="http://geotehn.ru/sites/default/files/resize/sovluk-100x152.png" style="border:0px; font-family:arial,helvetica,sans-serif; height:152px; margin:3px; width:100px" /></a></td>
+          <td>
+            <p><span style="color:#FFFFE0"><span style="font-family:arial,helvetica,sans-serif"><span style="font-size:16px"><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></span></span></span></p>
+
+            <p><span style="color:#FFFFE0"><span style="font-family:arial,helvetica,sans-serif; font-size:16px">Совлук Виктор Иванович</span></span></p>
+          </td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>
+            <p><span style="color:#FFF0F5"><span style="font-family:arial,helvetica,sans-serif"><strong><span style="font-size:16px">Директор отдела инженерных изысканий</span></strong></span></span></p>
+
+            <p><span style="color:#FFF0F5"><span style="font-size:16px">Хомяков Андрей Сергеевич</span></span></p>
+          </td>
+        </tr>
+        <tr>
+          <td><img alt="" src="http://geotehn.ru/sites/default/files/asovluk.png" style="border:1px solid; height:152px; margin:3px; width:100px" /></td>
+          <td>
+            <p><span style="color:#FFF0F5"><span style="font-family:arial,helvetica,sans-serif"><strong><span style="font-size:16px">Директор отдела геологоразведочных работ</span></strong></span></span></p>
+
+            <p><span style="color:#FFF0F5"><span style="font-family:arial,helvetica,sans-serif; font-size:16px">Совлук Александр Викторович</span></span></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
