--- a/GeoApp/ClientApp/src/app/user/components/about/about.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/about.component.html
@@ -2,7 +2,7 @@
   <mat-tab label="О компании">
     <app-about-main></app-about-main>
   </mat-tab>
-  <mat-tab label="Персонал">
+  <mat-tab label="Руководство">
     <app-about-staff></app-about-staff>
   </mat-tab>
   <mat-tab label="История">
