Add css about staff & main+add pictures

--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
@@ -1,28 +1,28 @@
-<p style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">ООО &laquo;Геологические технологии&raquo; создано 02.11.2011 г. Основная сфера деятельности предприятия &ndash; недропользование и связанные с ним направления работ.</span></span></p>
+<p class="about-text"><span><span>ООО &laquo;Геологические технологии&raquo; создано 02.11.2011 г. Основная сфера деятельности предприятия &ndash; недропользование и связанные с ним направления работ.</span></span></p>
 
-<p style="text-align:justify">&nbsp;</p>
+<p class="about-text">&nbsp;</p>
 
-<p style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Компания выполняет:</span></span></p>
-
-<ul style="list-style-type:none">
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Геологоразведочные работы;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Инженерные изыскания для строительства;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Гидрогеологические работы;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Разработку ТЭО кондиций и инвестиций;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Подсчет и защиту запасов полезных ископаемых;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Проектирование, связанное со строительством инженерных сооружений;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Экологические исследования;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Разработку проектно-сметной документации на геологоразведочные работы;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Подготовку инвестиционных проектов в сфере недропользования.</span></span></li>
-</ul>
-
-<p style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">ООО &laquo;Геологические технологии&raquo; обладает всеми возможностями для выполнения полевых, камеральных и проектно-исследовательских работ. Приоритетными для общества являются направления:</span></span></p>
+<p class="about-text"><span>Компания выполняет:</span></p>
 
 <ul style="list-style-type:none">
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Геологическое изучения недр;</span></span></li>
-  <li style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">Инженерно-геологические изыскания;</span></span></li>
+  <li class="about-text"><span>Геологоразведочные работы;</span></li>
+  <li class="about-text"><span>Инженерные изыскания для строительства;</span></li>
+  <li class="about-text"><span>Гидрогеологические работы;</span></li>
+  <li class="about-text"><span>Разработку ТЭО кондиций и инвестиций;</span></li>
+  <li class="about-text"><span>Подсчет и защиту запасов полезных ископаемых;</span></li>
+  <li class="about-text"><span>Проектирование, связанное со строительством инженерных сооружений;</span></li>
+  <li class="about-text"><span>Экологические исследования;</span></li>
+  <li class="about-text"><span>Разработку проектно-сметной документации на геологоразведочные работы;</span>></li>
+  <li class="about-text"><span>Подготовку инвестиционных проектов в сфере недропользования.</span></li>
 </ul>
 
-<p style="text-align:justify"><span style="font-size:16px"><span style="color:#FAEBD7">ООО &laquo;Геологические технологии&raquo; развивается как предприятие, использующее и внедряющее современные методы и технические средства ведения работ. В ООО &laquo;Геологические технологии&raquo; работают специалисты, имеющие большой практический и научный опыт работ, а также молодые геологи, владеющие современными знаниями и технологиям.</span></span></p>
+<p class="about-text"><span>ООО &laquo;Геологические технологии&raquo; обладает всеми возможностями для выполнения полевых, камеральных и проектно-исследовательских работ. Приоритетными для общества являются направления:</span></p>
+
+<ul style="list-style-type:none">
+  <li class="about-text"><span>Геологическое изучения недр;</span></li>
+  <li style="text-align:justify"><span>Инженерно-геологические изыскания;</span></li>
+</ul>
+
+<p class="about-text"><span>ООО &laquo;Геологические технологии&raquo; развивается как предприятие, использующее и внедряющее современные методы и технические средства ведения работ. В ООО &laquo;Геологические технологии&raquo; работают специалисты, имеющие большой практический и научный опыт работ, а также молодые геологи, владеющие современными знаниями и технологиям.</span></p>
 
 <p><img alt="" src="https://cameralabs.org/media/lab17/05/16/siniy-les-foto.jpg" style="color:rgb(250, 235, 215); font-size:16px; height:200px; margin-left:100px; margin-right:100px; opacity:0.9; width:300px" /></p>
