--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
@@ -9,27 +9,27 @@
     <table border="0" cellpadding="1" cellspacing="1" style="border-collapse:collapse; margin:1px; width:500px">
       <tbody>
         <tr>
-          <td><a class="lb2" href="http://geotehn.ru/sites/default/files/sovluk.png" style="margin: 0px; padding: 0px; color: rgb(44, 70, 148); text-decoration-line: none;"><img alt="" src="http://geotehn.ru/sites/default/files/resize/sovluk-100x152.png" style="border:0px; font-family:arial,helvetica,sans-serif; height:152px; margin:3px; width:100px" /></a></td>
+          <td><a class="lb2" src="../../../../../../assets/sovluk.png" style="margin: 0px; padding: 0px; color: rgb(44, 70, 148); text-decoration-line: none;"><img alt="" src="http://geotehn.ru/sites/default/files/resize/sovluk-100x152.png" style="border:0px; font-family:arial,helvetica,sans-serif; height:152px; margin:3px; width:100px" /></a></td>
           <td>
-            <p><span style="color:#FFFFE0"><span style="font-family:arial,helvetica,sans-serif"><span style="font-size:16px"><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></span></span></span></p>
+            <span class="staff-text"><span><span><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></span></span></span>
 
-            <p><span style="color:#FFFFE0"><span style="font-family:arial,helvetica,sans-serif; font-size:16px">Совлук Виктор Иванович</span></span></p>
+            <span class="staff-text"><span>Совлук Виктор Иванович</span></span>
           </td>
         </tr>
         <tr>
           <td>&nbsp;</td>
           <td>
-            <p><span style="color:#FFF0F5"><span style="font-family:arial,helvetica,sans-serif"><strong><span style="font-size:16px">Директор отдела инженерных изысканий</span></strong></span></span></p>
+            <span class="staff-text"><span><strong><span>Директор отдела инженерных изысканий</span></strong></span></span>
 
-            <p><span style="color:#FFF0F5"><span style="font-size:16px">Хомяков Андрей Сергеевич</span></span></p>
+            <span class="staff-text"><span>Хомяков Андрей Сергеевич</span></span>
           </td>
         </tr>
         <tr>
-          <td><img alt="" src="http://geotehn.ru/sites/default/files/asovluk.png" style="border:1px solid; height:152px; margin:3px; width:100px" /></td>
+          <td><img alt="" src="../../../../../../assets/asovluk.png" style="border:1px solid; height:152px; margin:3px; width:100px" /></td>
           <td>
-            <p><span style="color:#FFF0F5"><span style="font-family:arial,helvetica,sans-serif"><strong><span style="font-size:16px">Директор отдела геологоразведочных работ</span></strong></span></span></p>
+            <span class="staff-text"><span><strong><span>Директор отдела геологоразведочных работ</span></strong></span></span>
 
-            <p><span style="color:#FFF0F5"><span style="font-family:arial,helvetica,sans-serif; font-size:16px">Совлук Александр Викторович</span></span></p>
+            <span class="staff-text"><span>Совлук Александр Викторович</span></span>
           </td>
         </tr>
       </tbody>
