some text & images

--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.html
@@ -1,3 +1,17 @@
-<p>
-  about-history works!
-</p>
+<p><span class="history-text"><span style="font-family:arial,helvetica,sans-serif">Подготовка к созданию компании АО &laquo;СИБГЕОТЕХ&raquo; началась в 2011&nbsp;г, когда у нескольких нынешних руководителей общества возникла идея создать современное горно-геологическое предприятие, которое бы соответствовало понятию &laquo;юниорное&raquo;.</span></span></p>
+         
+<p><span class="history-text">&nbsp; &nbsp; Для этого в ноябре 2011&nbsp;г было зарегистрировано Общество с ограниченной ответственностью &laquo;Геологические технологии&raquo;. Это был первый &laquo;кирпич&raquo; в здание будущего акционерного общества. Основная задача, которая была поставлена перед ООО &laquo;Геологические технологии&raquo; была задача развития направлений деятельности, которые должны быть положены в будущее Акционерное Общество &laquo;СИБГЕОТЕХ&raquo;. Для этого в ООО &laquo;Геологические технологии&raquo; создавались и успешно начали работу такие направления как: Поиски и разведка МПИ, Инженерно-геологические исследования, Проектирование горных производств, Маркшейдерские и геодезические работы, Экологические исследования. Для развития направлений подбирались специалисты любящие свою профессию, готовые творчески и напряженно работать, учиться.</span></p>
+         
+<p><span class="history-text">&nbsp; &nbsp; К 2014 году видовое разнообразие работ расширилось настолько, что возникла необходимость для каждого направления работ создать свое отдельное подразделение или предприятие. Для этого было зарегистрировано ООО &laquo;ГЕОТЕХНОЛОГИИ&raquo;. С этого момента работы собственного геологического, маркшейдерского и экологического&nbsp; содержания стали специализацией ООО &laquo;ГЕОТЕХНОЛОГИИ&raquo;, а работы связанные с инженерно-геологическими исследованиями и проектированием горных предприятий специализацией ООО &laquo;Геологические технологии&raquo;.</span></p>
+         
+<p><span class="history-text">&nbsp; &nbsp; В 2015-2016 годах количество работ экологического направления стало увеличиваться, что привело к необходимости создания самостоятельного предприятия ООО &laquo;Экологические технологии&raquo;. Работа над этим уже началась.</span></p>
+         
+<p><span class="history-text">&nbsp; &nbsp; К 2017 году отчетливо выкристаллизовалась необходимость в самостоятельном развитии направлений &laquo;Проектирование горных предприятий&raquo; и &laquo;Добыча полезных ископаемых&raquo;.</span></p>
+         
+<p><span class="history-text">&nbsp; &nbsp; Таким образом, идея создания современной юниорной компании получила осязаемость. К 2017 году были в наличии: высокопрофессиональные кадры, наработанные портфели заказов по основным направлениям, материальная и административная база, определенный положительный имидж предприятий. Были разработаны стратегия развития компании, определены задачи ее деятельности на краткосрочную и долгосрочную перспективу.</span></p>
+         
+<p><span class="history-text">Акционерное общество &laquo;СИБГЕОТЕХ&raquo; было создано в 2017 году.</span></p>
+         
+<p><span class="history-text">&nbsp; &nbsp; Оно объединило ранее созданные предприятия. Теперь они являются дочерними предприятиями акционерного общества с долей в уставном капитале 100%.</span></p>
+         
+<p><span class="history-text">Работа над развитием и расширением структуры акционерного общества продолжается.</span></p>
