--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
@@ -1,28 +1,88 @@
-<p class="about-text"><span><span>ООО &laquo;Геологические технологии&raquo; создано 02.11.2011 г. Основная сфера деятельности предприятия &ndash; недропользование и связанные с ним направления работ.</span></span></p>
+  <div>
+    <p style="text-align:center"><span class="about-text"><strong><u>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</u></strong></span></p>
 
-<p class="about-text">&nbsp;</p>
+    <p>&nbsp;</p>
 
-<p class="about-text"><span>Компания выполняет:</span></p>
+    <p>&nbsp;</p>
 
-<ul style="list-style-type:none">
-  <li class="about-text"><span>Геологоразведочные работы;</span></li>
-  <li class="about-text"><span>Инженерные изыскания для строительства;</span></li>
-  <li class="about-text"><span>Гидрогеологические работы;</span></li>
-  <li class="about-text"><span>Разработку ТЭО кондиций и инвестиций;</span></li>
-  <li class="about-text"><span>Подсчет и защиту запасов полезных ископаемых;</span></li>
-  <li class="about-text"><span>Проектирование, связанное со строительством инженерных сооружений;</span></li>
-  <li class="about-text"><span>Экологические исследования;</span></li>
-  <li class="about-text"><span>Разработку проектно-сметной документации на геологоразведочные работы;</span>></li>
-  <li class="about-text"><span>Подготовку инвестиционных проектов в сфере недропользования.</span></li>
-</ul>
+    <p><span class="about-text">1.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Поиски, оценка и разведка месторождений твердых полезных ископаемых, включая:</span></p>
 
-<p class="about-text"><span>ООО &laquo;Геологические технологии&raquo; обладает всеми возможностями для выполнения полевых, камеральных и проектно-исследовательских работ. Приоритетными для общества являются направления:</span></p>
+    <p><span class="about-text">1.1.&nbsp;&nbsp; разработка проектно-сметной документации;</span></p>
 
-<ul style="list-style-type:none">
-  <li class="about-text"><span>Геологическое изучения недр;</span></li>
-  <li style="text-align:justify"><span>Инженерно-геологические изыскания;</span></li>
-</ul>
+    <p><span class="about-text">1.2.&nbsp;&nbsp; проведение поисков, оценки и разведки месторождений полезных ископаемых;</span></p>
 
-<p class="about-text"><span>ООО &laquo;Геологические технологии&raquo; развивается как предприятие, использующее и внедряющее современные методы и технические средства ведения работ. В ООО &laquo;Геологические технологии&raquo; работают специалисты, имеющие большой практический и научный опыт работ, а также молодые геологи, владеющие современными знаниями и технологиям.</span></p>
+    <p><span class="about-text">1.3.&nbsp;&nbsp; разработка кондиций к подсчету запасов полезных ископаемых;</span></p>
 
-<p><img alt="" src="https://cameralabs.org/media/lab17/05/16/siniy-les-foto.jpg" style="color:rgb(250, 235, 215); font-size:16px; height:200px; margin-left:100px; margin-right:100px; opacity:0.9; width:300px" /></p>
+    <p><span class="about-text">1.4.&nbsp;&nbsp; подсчет и защита запасов в ТКЗ и в ГКЗ России;</span></p>
+
+    <p><span class="about-text">2.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Инженерно-геологические изыскания для строительства объектов гражданского и промышленного строительства, в том числе высокого уровня ответственности, включая:</span></p>
+
+    <p><span class="about-text">2.1.&nbsp;&nbsp; инженерно-геологическая и гидрогеологическая съемки;</span></p>
+
+    <p><span class="about-text">2.2.&nbsp;&nbsp; полевые определения физико-механических свойств грунтов, в том числе:</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; штамповые испытания грунтов (в том числе горячими штампами);</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; прессиометрические испытания грунтов;</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; определение прочностных характеристик грунтов;</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; статистическое и динамическое зондирование грунтов;</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; испытания грунтов сваями.</span></p>
+
+    <p><span class="about-text">2.3.&nbsp;&nbsp; гидрогеологические исследования:</span></p>
+
+    <p><span class="about-text">2.4.&nbsp;&nbsp; кустовые, одиночные, групповые, &laquo;экспресс&raquo; - откачки воды из скважин, в том числе:</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; опытные выпуски воды из &laquo;фонтанирующих&raquo; скважин;</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; опытные наливы воды в скважины и шурфы;</span></p>
+
+    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; опытные нагнетания воды в скважины, в том числе с использованием оригинальных тампонов разжимного действия, с использование двойного пневмотампона;</span></p>
+
+    <p><span class="about-text">&nbsp;2.5.&nbsp;&nbsp;&nbsp;&nbsp; Лабораторные исследования грунтов</span>></p>
+
+    <p><span class="about-text">3.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Бурение инженерных, геологоразведочных и гидрогеологических скважин;</span></p>
+
+    <p><span class="about-text">4.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Поиски, оценка, разведка и подсчет запасов подземных вод;</span></p>
+
+    <p><span class="about-text">5.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Работы по мониторингу состояния и загрязнения окружающей природной среды;</span></p>
+
+    <p><span class="about-text">6.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Разработка проектов зон санитарной охраны водозаборов;</span></p>
+
+    <p><span class="about-text">7.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Проектирование опасных производственных объектов связанных с добычей полезных ископаемых;</span></p>
+
+    <p><span class="about-text">8.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Добыча полезных ископаемых.</span></p>
+
+    <p>&nbsp;</p>
+
+    <p><span class="about-text"><strong><u>НАШИ ЗАКАЗЧИКИ</u></strong></span></p>
+
+    <p>&nbsp;</p>
+
+    <p><span class="about-text">1.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Филиал ПАО &laquo;РусГидро&raquo;-&laquo;Саяно-Шушенская ГЭС&raquo;.</span></p>
+
+    <p><span class="about-text">2.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ПАО &laquo;Ленгидропроект&raquo;.</span></p>
+
+    <p><span class="about-text">3.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ОАО &laquo;Красноярская буровая компания&raquo;.</span></p>
+
+    <p><span class="about-text">4.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Природа-Промдобыча&raquo;.</span></p>
+
+    <p><span class="about-text">5.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Копыловский&raquo;.</span></p>
+
+    <p><span class="about-text">6.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Красный&raquo;.</span></p>
+
+    <p><span class="about-text">7.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Геостройсервис-с&raquo;.</span></p>
+
+    <p><span class="about-text">8.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Прогресс-инвест&raquo;.</span></p>
+
+    <p><span class="about-text">9.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Новагео&raquo;.</span></p>
+
+    <p><span class="about-text">10. &nbsp;&nbsp; ООО &laquo;Аккаргинские хромиты&raquo;.</span></p>
+
+    <p><span class="about-text">11. &nbsp;&nbsp; ПАО &laquo;КрасноярскТИСИЗ&raquo;.</span></p>
+
+    <p><span class="about-text">12.&nbsp;&nbsp;&nbsp; ООО &laquo;АЛАНС&raquo;</span></p>
+  </div>
+
