--- a/GeoApp/ClientApp/src/app/app.component.css
+++ b/GeoApp/ClientApp/src/app/app.component.css
@@ -53,11 +53,10 @@ a {
 }
 
 .toolbar-logo {
-  height: 80px;
-  margin-top: 7px;
-  margin-left: 2px;
-  margin-right: 2px;
-  width: 80px
+  height: 60px;
+  margin-top: 10px;
+  margin-right: 10px;
+  width: auto
 }
 
 .sidenav-logo {
