--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.css
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.css
@@ -1,4 +1,10 @@
-.history-text {
+q {
+  quotes: "\00ab" "\00bb";
+}
+
+p {
   font-size: 16px;
   color: #FAEBD7;
+  text-indent: 30px;
+  text-align: justify;
 }
