--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.css
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.css
@@ -3,3 +3,11 @@
   font-family: arial,helvetica,sans-serif;
   font-size: 16px;
 }
+img {
+  transition: zoom 0.25s ease;
+}
+
+  img:active {
+    zoom: 100%
+  }
+
