stop show scroll for tab content on tab change

--- a/GeoApp/ClientApp/src/app/user/components/about/about.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/about.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group>
+<mat-tab-group [dynamicHeight]="true" flex>
   <mat-tab label="О компании">
     <app-about-main></app-about-main>
   </mat-tab>
