--- a/GeoApp/ClientApp/src/app/user/components/geo-services/geo-services.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/geo-services/geo-services.component.html
@@ -1,3 +1,17 @@
-<p>
-  geo-services works!
-</p>
+<mat-tab-group [dynamicHeight]="true" flex>
+  <mat-tab label="Экологические исследования">
+    <app-eco-research></app-eco-research>
+  </mat-tab>
+  <mat-tab label="Геологические исследования">
+    <app-geo-research></app-geo-research>
+  </mat-tab>
+  <mat-tab label="Инженерно-геологические изыскания">
+    <app-ingeneering-research></app-ingeneering-research>
+  </mat-tab>
+  <mat-tab label="Проектирование карьеров, шахт, прос. предприятий">
+    <app-mine-planning></app-mine-planning>
+  </mat-tab>
+  <mat-tab label="Геодезические и маркшейдерские работы">
+    <app-surveyor-works></app-surveyor-works>
+  </mat-tab>
+ </mat-tab-group>
